--- a/board/src/main/resources/application.yml
+++ b/board/src/main/resources/application.yml
@@ -2,11 +2,11 @@ spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/spring_board?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
-    username: root
-    password: dkagh1.
+    username: user
+    password: 1234
 
   jpa:
-    database-platform: org.hibernate.dialect.MySQL5InnoDBDialect  # JPA 데이터베이스 플랫폼 (InnoDB)
+    database-platform: org.hibernate.dialect.MySQL5Dialect
     open-in-view: false
     show-sql: true
     hibernate:
